post-check;id#: 863;v: 1.15;

--- a/todo/today/todo_2023_09.md
+++ b/todo/today/todo_2023_09.md
@@ -47,12 +47,18 @@ THREEJS, videoground-beta-world, Linux
 * () edit: threejs-buffer-geometry -  write about new built in demos
 
 ### () - TUE 09/12/2023
+* (done) forpost: threejs-examples-nested-groups - new r0 demos
+* (done) edit: threejs-examples-nested-groups - wrote about new demos
 <!-- edit 5k -->
 * () forpost: threejs-buffer-geometry - new built in section demos
 * () edit: threejs-buffer-geometry -  write about new built in demos
 <!-- new -->
 * () forpost: threejs-polyhedron-geometry - expand demos
-
+<!-- videoground-beta-world -->
+* () vgbw: audio-generator-tunes - work on videos
+* () audio-generator-tunes - start a new folder for 'tunes'
+<!-- electionjs -->
+* () electionjs - work on position editor
 
 ### () - MON 09/11/2023
 * (done) forpost: threejs-examples-camera-kit - check state of folder, update to r146
@@ -60,10 +66,7 @@ THREEJS, videoground-beta-world, Linux
 * (done) forpost: threejs-buffer-geometry - new built in section demos
 * (done) edit: threejs-buffer-geometry -  write about new built in demos
 * (done) start a for post folder for threejs-polyhedron-geometry
-<!-- videoground-beta-world -->
-* () audio-generator-tunes - start a new folder for 'tunes'
-<!-- electionjs -->
-* () electionjs - work on position editor
+* (done) vgbw: audio-generator-tunes - work on videos
 
 ### () - SUN 09/10/2023
 * (done) audio-generator-tunes - work on videos, and new wav export feature
