post-check;id#: 851;v: 1.92;

--- a/todo/today/todo_2023_09.md
+++ b/todo/today/todo_2023_09.md
@@ -49,9 +49,8 @@ THREEJS, videoground-beta-world, Linux
 ### () - TUE 09/12/2023
 * (done) forpost: threejs-examples-nested-groups - new r0 demos
 * (done) edit: threejs-examples-nested-groups - wrote about new demos
-<!-- edit 5k -->
-* () forpost: threejs-buffer-geometry - new built in section demos
-* () edit: threejs-buffer-geometry -  write about new built in demos
+* (done) forpost: threejs-buffer-geometry - new built in section demos
+* (done) edit: threejs-buffer-geometry -  write about new built in demos
 <!-- new -->
 * () forpost: threejs-polyhedron-geometry - expand demos
 <!-- videoground-beta-world -->
