--- a/todo/today/todo_2023_09.md
+++ b/todo/today/todo_2023_09.md
@@ -51,8 +51,7 @@ THREEJS, videoground-beta-world, Linux
 * (done) edit: threejs-examples-nested-groups - wrote about new demos
 * (done) forpost: threejs-buffer-geometry - new built in section demos
 * (done) edit: threejs-buffer-geometry -  write about new built in demos
-<!-- new -->
-* () forpost: threejs-polyhedron-geometry - expand demos
+* (done) forpost: threejs-polyhedron-geometry - expand demos
 <!-- videoground-beta-world -->
 * () vgbw: audio-generator-tunes - work on videos
 * () audio-generator-tunes - start a new folder for 'tunes'
