post-check;id#: 1002;v: 1.11;

--- a/todo/today/todo_2023_09.md
+++ b/todo/today/todo_2023_09.md
@@ -29,11 +29,14 @@ THREEJS, videoground-beta-world, Linux
 ## () - WEEK 3 - SUN 09/10/2023 - SAT 09/16/2023
 
 ### () - SAT 09/16/2023
+<!-- electionjs -->
+* () electionjs - work on position editor
 
 ### () - FRI 09/15/2023
 <!-- edit 5k -->
 * () forpost: threejs-buffer-geometry - new built in section demos
 * () edit: threejs-buffer-geometry -  write about new built in demos
+
 
 ### () - THU 09/14/2023
 * () new: start post # 1071 on threejs-polyhedron-geometry
@@ -42,9 +45,17 @@ THREEJS, videoground-beta-world, Linux
 * () edit: threejs-buffer-geometry -  write about new built in demos
 
 ### () - WED 09/13/2023
+<!-- edit -->
+* () forpost: threejs-examples-many-object-tweening - 146 style update
+* () edit: threejs-examples-many-object-tweening - code update, proof read, ect
 <!-- edit 5k -->
 * () forpost: threejs-buffer-geometry - new built in section demos
 * () edit: threejs-buffer-geometry -  write about new built in demos
+<!-- videoground-beta-world -->
+* () vgbw: audio-generator-1 - work on videos
+* () vgbw: audio-generator-tunes-seededrandom - start a whole collection of videos where I work out tunes using seeded random waveform
+* () vgbw: audio-generator-tunes-midi - start a new folder for 'miditunes'
+* () vgbw: audio-generator-vertex - start a new collection of videos that have to do with using vertex values to set sample data
 
 ### () - TUE 09/12/2023
 * (done) forpost: threejs-examples-nested-groups - new r0 demos
@@ -52,11 +63,7 @@ THREEJS, videoground-beta-world, Linux
 * (done) forpost: threejs-buffer-geometry - new built in section demos
 * (done) edit: threejs-buffer-geometry -  write about new built in demos
 * (done) forpost: threejs-polyhedron-geometry - expand demos
-<!-- videoground-beta-world -->
-* () vgbw: audio-generator-tunes - work on videos
-* () audio-generator-tunes - start a new folder for 'tunes'
-<!-- electionjs -->
-* () electionjs - work on position editor
+* (done) vgbw: audio-generator-1 - work on videos
 
 ### () - MON 09/11/2023
 * (done) forpost: threejs-examples-camera-kit - check state of folder, update to r146
@@ -64,7 +71,7 @@ THREEJS, videoground-beta-world, Linux
 * (done) forpost: threejs-buffer-geometry - new built in section demos
 * (done) edit: threejs-buffer-geometry -  write about new built in demos
 * (done) start a for post folder for threejs-polyhedron-geometry
-* (done) vgbw: audio-generator-tunes - work on videos
+* (done) vgbw: audio-generator-1 - work on videos
 
 ### () - SUN 09/10/2023
 * (done) audio-generator-tunes - work on videos, and new wav export feature
