post-check;id#: 851;v: 1.93;

--- a/todo/today/todo_2023_09.md
+++ b/todo/today/todo_2023_09.md
@@ -45,12 +45,10 @@ THREEJS, videoground-beta-world, Linux
 * () edit: threejs-buffer-geometry -  write about new built in demos
 
 ### () - WED 09/13/2023
-<!-- edit -->
-* () forpost: threejs-examples-many-object-tweening - 146 style update
-* () edit: threejs-examples-many-object-tweening - code update, proof read, ect
-<!-- edit 5k -->
-* () forpost: threejs-buffer-geometry - new built in section demos
-* () edit: threejs-buffer-geometry -  write about new built in demos
+* (done) forpost: threejs-examples-many-object-tweening - 146 style update
+* (done) edit: threejs-examples-many-object-tweening - code update, proof read, ect
+* (done) forpost: threejs-buffer-geometry - new built in section demos
+* (done) edit: threejs-buffer-geometry -  write about new built in demos
 <!-- videoground-beta-world -->
 * () vgbw: audio-generator-1 - work on videos
 * () vgbw: audio-generator-tunes-seededrandom - start a whole collection of videos where I work out tunes using seeded random waveform
