post-check;id#: 1071;v: 1.0;

--- a/todo/today/todo_2023_09.md
+++ b/todo/today/todo_2023_09.md
@@ -33,27 +33,29 @@ THREEJS, videoground-beta-world, Linux
 * () electionjs - work on position editor
 
 ### () - FRI 09/15/2023
+<!-- edit -->
+* () edit: threejs-polyhedron-geometry - finish post
 <!-- edit 5k -->
 * () forpost: threejs-buffer-geometry - new built in section demos
 * () edit: threejs-buffer-geometry -  write about new built in demos
 
 
 ### () - THU 09/14/2023
-* () new: start post # 1071 on threejs-polyhedron-geometry
+* (done) new: start post # 1071 on threejs-polyhedron-geometry
 <!-- edit 5k -->
 * () forpost: threejs-buffer-geometry - new built in section demos
 * () edit: threejs-buffer-geometry -  write about new built in demos
+<!-- videoground-beta-world -->
+* () vgbw: audio-generator-1 - work on videos
+* () vgbw: audio-generator-tunes-midi - start a new folder for 'miditunes'
+* () vgbw: audio-generator-vertex - start a new collection of videos that have to do with using vertex values to set sample data
 
 ### () - WED 09/13/2023
 * (done) forpost: threejs-examples-many-object-tweening - 146 style update
 * (done) edit: threejs-examples-many-object-tweening - code update, proof read, ect
 * (done) forpost: threejs-buffer-geometry - new built in section demos
 * (done) edit: threejs-buffer-geometry -  write about new built in demos
-<!-- videoground-beta-world -->
-* () vgbw: audio-generator-1 - work on videos
-* () vgbw: audio-generator-tunes-seededrandom - start a whole collection of videos where I work out tunes using seeded random waveform
-* () vgbw: audio-generator-tunes-midi - start a new folder for 'miditunes'
-* () vgbw: audio-generator-vertex - start a new collection of videos that have to do with using vertex values to set sample data
+* (done) vgbw: audio-generator-tunes-seededrandom - start a whole collection of videos where I work out tunes using seeded random waveform
 
 ### () - TUE 09/12/2023
 * (done) forpost: threejs-examples-nested-groups - new r0 demos
