--- a/todo/today/todo_2023_09.md
+++ b/todo/today/todo_2023_09.md
@@ -42,9 +42,8 @@ THREEJS, videoground-beta-world, Linux
 
 ### () - THU 09/14/2023
 * (done) new: start post # 1071 on threejs-polyhedron-geometry
-<!-- edit 5k -->
-* () forpost: threejs-buffer-geometry - new built in section demos
-* () edit: threejs-buffer-geometry -  write about new built in demos
+* (done) forpost: threejs-buffer-geometry - new built in section demos
+* (done) edit: threejs-buffer-geometry -  write about new built in demos
 <!-- videoground-beta-world -->
 * () vgbw: audio-generator-1 - work on videos
 * () vgbw: audio-generator-tunes-midi - start a new folder for 'miditunes'
