post-check;id#: 851;v: 1.95;

--- a/todo/today/todo_2023_09.md
+++ b/todo/today/todo_2023_09.md
@@ -33,21 +33,21 @@ THREEJS, videoground-beta-world, Linux
 * () electionjs - work on position editor
 
 ### () - FRI 09/15/2023
+* (done) forpost: threejs-buffer-geometry - new built in section demos
+* (done) edit: threejs-buffer-geometry -  write about new built in demos
 <!-- edit -->
 * () edit: threejs-polyhedron-geometry - finish post
-<!-- edit 5k -->
-* () forpost: threejs-buffer-geometry - new built in section demos
-* () edit: threejs-buffer-geometry -  write about new built in demos
-
+<!-- videoground-beta-world -->
+* () vgbw: audio-generator-tunes-seededrandom - work on videos
+* () vgbw: audio-generator-1 - work on videos
+* () vgbw: audio-generator-tunes-midi - start a new folder for 'miditunes'
+* () vgbw: audio-generator-vertex - start a new collection of videos that have to do with using vertex values to set sample data
 
 ### () - THU 09/14/2023
 * (done) new: start post # 1071 on threejs-polyhedron-geometry
 * (done) forpost: threejs-buffer-geometry - new built in section demos
 * (done) edit: threejs-buffer-geometry -  write about new built in demos
-<!-- videoground-beta-world -->
-* () vgbw: audio-generator-1 - work on videos
-* () vgbw: audio-generator-tunes-midi - start a new folder for 'miditunes'
-* () vgbw: audio-generator-vertex - start a new collection of videos that have to do with using vertex values to set sample data
+* (done) vgbw: audio-generator-tunes-seededrandom - started new collection
 
 ### () - WED 09/13/2023
 * (done) forpost: threejs-examples-many-object-tweening - 146 style update
